--- a/c/implementations/implementations/implementations.vcxproj.filters
+++ b/c/implementations/implementations/implementations.vcxproj.filters
@@ -56,5 +56,8 @@
     <ClCompile Include="dictionary.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="search.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
