--- a/c/implementations/implementations/implementations.vcxproj
+++ b/c/implementations/implementations/implementations.vcxproj
@@ -144,7 +144,9 @@
     <ClInclude Include="GenericVector.h" />
     <ClInclude Include="Heap.h" />
     <ClInclude Include="linkedlist.h" />
+    <ClInclude Include="printers.h" />
     <ClInclude Include="queue.h" />
+    <ClInclude Include="sorting.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="vector.h" />
@@ -156,6 +158,7 @@
     <ClCompile Include="linkedlist.cpp" />
     <ClCompile Include="queue.cpp" />
     <ClCompile Include="search.cpp" />
+    <ClCompile Include="sorting.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
