--- a/c/implementations/implementations/implementations.vcxproj.filters
+++ b/c/implementations/implementations/implementations.vcxproj.filters
@@ -92,5 +92,8 @@
     <ClCompile Include="graph.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Heap.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
